2010-10-29  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Add and publish manifest for mingw-get.

	* mingw32/mingw32-mingw-get.xml: New file;
	generate and publish mingw32-mingw-get.xml.lzma
	* mingw32/mingw32-package-list.xml: Register it; regenerate and
	publish mingw32-package-list.xml.lzma
	* mingw32/issue.log: Update accordingly.

2010-10-24  Cesar Strauss  <cestrauss@gmail.com>

	Update & publish msys-bash.

	* msys/msys-bash.xml: Update to 3.1.17-4.
	* msys/issue.log: Updated accordingly.

2010-10-07  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* msys/msys-mintty.xml: Fix typo.

2010-10-07  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* msys/msys-package-list.xml: Add msys-mintty.
	Regenerate and publish msys-package-list.xml.lzma
	* msys/issue.log: Updated accordingly.

2010-10-06  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* msys/msys-mintty.xml: New file.
	* msys/issue.log: Updated accordingly.

2010-09-30  Cesar Strauss  <cestrauss@gmail.com>

	Update & publish msys-core, mingw32-gcc4.

	* msys/msys-core.xml: Update to 1.0.16.

	* mingw32/mingw32-gcc4.xml: Add missing	dependency on
	mingw32-pthreads-w32-dev.
	Remove direct dependency on libpthread-2.dll.

	* msys/issue.log: Updated accordingly.

	* mingw/issue.log: Ditto.

2010-09-26  Charles Wilson  <mingw@cwilson.fastmail.fm>

	Update & publish msys-autoconf, msys-libtool, msys-bison.

	* msys/msys-autoconf.xml: Add new autoconf-2.67-1 release.

	* msys/msys-libtool.xml: Add new libtool-2.4-1 release.

	* msys/msys-bison.xml: Add missing msys-m4-bin requirement.

	* msys/issue.log: Updated accordingly.

2010-09-25  Charles Wilson  <mingw@cwilson.fastmail.fm>

	Update & publish mingw32-libtool, mingw32-gdb.

	* mingw32/mingw32-libtool.xml: Add new libtool-2.4-1 release.

	* mingw32/mingw32-gdb.xml: Add missing libexpat-dll requirement.

	* mingw32/issue.log: Updated accordingly.

2010-09-11  Charles Wilson  <mingw@cwilson.fastmail.fm>
