@@ -40,7 +40,7 @@
   mingw32-libiconv.xml:2010090601
   mingw32-libtool.xml:2010092500
   mingw32-make.xml:2010070100
-  mingw32-mingw-get.xml:2010102900
+  mingw32-mingw-get.xml:2010110100
   mingw32-mingw-utils.xml:2010090600
   mingw32-package-list.xml:2010102900
   mingw32-pdcurses.xml:2010090600
