@@ -27,15 +27,15 @@
       </description>
 
       <component class="bin">
-        <release tarname="mingw-get-0.1-mingw32-alpha-3-bin.tar.gz" />
-        <release tarname="mingw-get-0.1-mingw32-alpha-4-bin.tar.gz" />
         <release tarname="mingw-get-0.1-mingw32-alpha-5-bin.tar.gz" />
+        <release tarname="mingw-get-0.1-mingw32-alpha-4-bin.tar.gz" />
+        <release tarname="mingw-get-0.1-mingw32-alpha-3-bin.tar.gz" />
       </component>
 
       <component class="lic">
-        <release tarname="mingw-get-0.1-mingw32-alpha-3-lic.tar.gz" />
-        <release tarname="mingw-get-0.1-mingw32-alpha-4-lic.tar.gz" />
         <release tarname="mingw-get-0.1-mingw32-alpha-5-lic.tar.gz" />
+        <release tarname="mingw-get-0.1-mingw32-alpha-4-lic.tar.gz" />
+        <release tarname="mingw-get-0.1-mingw32-alpha-3-lic.tar.gz" />
       </component>
     </package>
 
